<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.nanodegree.fehr.buildasinglescreenapp.MainActivity">

        <ImageView
            android:id="@+id/image_view_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/picture_of_the_restaurant"
            android:scaleType="centerInside"
            android:src="@drawable/image_restaurant" />

        <TextView
            android:id="@+id/text_view_name"
            style="@style/CustomTextViewStyle"
            android:layout_below="@id/image_view_restaurant"
            android:layout_centerHorizontal="true"
            android:padding="16dp"
            android:text="@string/restaurant_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linear_layout_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_name"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_layout_address"
                style="@style/HorizontalLinearLayoutStyle"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/image_view_address"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/icon_address"
                    android:src="@drawable/ic_address"/>

                <TextView
                    style="@style/CustomTextViewStyle"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:textSize="14sp"
                    android:text="@string/address"
                    android:id="@+id/textView"
                    android:autoLink="map"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_phone"
                style="@style/HorizontalLinearLayoutStyle"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/image_view_phone"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/icon_phone"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_phone" />

                <TextView
                    style="@style/CustomTextViewStyle"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:textSize="14sp"
                    android:text="@string/phone_number"
                    android:autoLink="phone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_website"
                style="@style/HorizontalLinearLayoutStyle"
                android:layout_marginTop="8dp">
                <ImageView
                    android:id="@+id/image_view_website"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/icon_web_site"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_web_site" />

                <TextView
                    style="@style/CustomTextViewStyle"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:textSize="14sp"
                    android:text="@string/web_site"
                    android:autoLink="web" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/mini_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout_info"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:text="@string/mini_description"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mini_description"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:text="@string/description" />


    </RelativeLayout>

</ScrollView>
